# ziolib

./: CMakeLists.txt  LICENSE  Makefile  README.md  ziolib.hpp
docs/en/: en_doc.md
examples/: main.cpp
